--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: liuchenxi
  * @Date: 2021-09-27 13:43:26
- * @LastEditTime: 2021-09-27 14:26:04
+ * @LastEditTime: 2021-09-27 16:43:00
  * @LastEditors: Please set LastEditors
  * @Description: caller
  * @FilePath: \webrtc-demo\public\index.html
@@ -12,26 +12,35 @@
 <title>Webrtc-Demo</title>
 <style>
   .container {
-    width: 250px;
-    margin: 100px auto;
+    display: flex;
     padding: 10px 30px;
+  }
+
+  .caller,
+  .answer {
+    width: 740px;
+    height: 780px;
+    color: #303133;
+    margin: 0px 12px;
+    padding: 30px;
     border-radius: 4px;
     border: 1px solid #ebeef5;
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1);
-    color: #303133;
   }
 </style>
 </head>
 
 <body>
   <div class="container">
-    <p>流程：</p>
-    <ul>
-      <li>打开<a href="/answer.html?type=answer" target="_blank">Answer</a>；</li>
-      <li>打开<a href="/answer.html?type=offer" target="_blank">Caller</a>；</li>
-      <li>确认双方都已建立ws连接；</li>
-      <li>发起方点击 start 按钮。</li>
-    </ul>
+    <div class="caller">
+      <iframe src="http://localhost:3000/client.html?type=offer" frameborder="0"
+        style="width: 100%; height: 100%"></iframe>
+    </div>
+
+    <div class="answer">
+      <iframe src="http://localhost:3000/client.html?type=answer" frameborder="0"
+        style="width: 100%; height: 100%"></iframe>
+    </div>
   </div>
 </body>
 
