--- a/public/client.html
+++ b/public/client.html
@@ -1,9 +1,9 @@
 <!--
  * @Author: liuchenxi
  * @Date: 2021-09-27 13:46:33
- * @LastEditTime: 2021-09-27 20:35:34
+ * @LastEditTime: 2021-09-27 20:38:02
  * @LastEditors: Please set LastEditors
- * @Description: answer
+ * @Description: Client
  * @FilePath: \webrtc-demo\public\answer.html
 -->
 <!DOCTYPE html>
